--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,17 +6,21 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <style>
+    body {background:#FFF0F5;}
+  </style>
 </head>
 <body>
     <nav class="navbar">
     <div class="container">
       <div class="navbar-header">
-        <a class="navbar-brand" href="#">Message Board</a>
+        <a class="navbar-brand" href="#" >MessageBoard</a>
       </div>
     </div>
   </nav>
   <div class="container">
     <%= yield %>
+   
   </div>
 </body>
 </html>
