--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,34 +1,21 @@
- <center>  <%= image_tag ("Marianne-logo.png") %></center>
+<%= form_for(@message) do |f| %>
+  <% if @message.errors.present? %>
+    <div class="alert alert-danger">
+      <%= alert %>
+      <ul>
+        <% @message.errors.full_messages.each do |full_message| %>
+          <li>
+            <%= full_message %>
+          </li>
+        <% end %> 
+      </ul>
+    </div>
+  <% end %>
 
-<div class="panel panel-danger">
-  <div class="alert alert-danger" >
-    メッセージ一覧
-  </div>
-  <div class="panel-body">
-    <% @messages.each do |message| %>
-      <span class="label label-danger"><%= message.name %></span>
-      <%= message.body %>
-      <br>
-    <% end %>
-  </div>
-</div>
-<%= form_for(Message.new)do |f| %>
-<label>名前</label>
-<br>
-  <%= f.text_field :name, class:"panel panel-danger" %>
+  名前:
+  <%= f.text_field :name %>
 
-<br>
-  <label>内容</label>
-<br>
-<%= f.text_area :body, :size =>"30x2",class:"panel panel-danger" %> 
-<br>  
-<br>
-  <%= f.submit class: "btn btn-sm btn-danger" %>
-<br>
-<br>
-   <nav>
-  <ul class="pager">
-  <li><%= link_to  "Home","/" %></li>
-  </ul>
-  </nav>
+  内容:
+  <%= f.text_field :body %>
+  <%= f.submit class: "btn btn-sm btn-primary" %>
 <% end %>
