--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,10 +12,22 @@
     </div>
   <% end %>
 
-  名前:
-  <%= f.text_field :name %>
+  <label>名前:<label>
+  <%= f.text_field :name,class:"panel panel-danger" %>
 
-  内容:
-  <%= f.text_field :body %>
+  <label>内容:</label>
+  <%= f.text_field :body, :size =>"30x2",class:"panel panel-danger" %>
   <%= f.submit class: "btn btn-sm btn-primary" %>
+  
+  <label>年齢:</label>
+  <%= f.text_field :age,class:"panel panel-danger" %>
+  
+  <%= f.submit class: "btn btn-sm btn-danger" %>
+  
+  <nav>
+  <ul class="pager">
+  <li><%= link_to  "Home","/" %></li>
+  </ul>
+  </nav>
+  
 <% end %>
