--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -8,6 +8,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+ <center><%= image_tag ("Marianne-logo.png") %></center>
 
 <div class="panel panel-default">
   <div class="panel-heading">
@@ -16,8 +17,8 @@
 
   <div class="panel-body">
     <% @messages.each do |message| %>
-      <span class="label label-info"><%= message.name %></span>
-        <%= message.body %>
+      <span class="label label-danger"><%= message.name %></span>
+       <%= message.body %>
         (<%= link_to "edit" , edit_message_path(message) %>
          <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>
         )
