--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <style>
+    body {background:#FFF0F5;}
+  </style>
 </head>
 <body>
  <center><%= image_tag ("Marianne-logo.png") %></center>
@@ -18,7 +21,8 @@
   <div class="panel-body">
     <% @messages.each do |message| %>
       <span class="label label-danger"><%= message.name %></span>
-       <%= message.body %>
+      <span class="label label-success"><%= message.age %></span>
+        <%= message.body %>
         (<%= link_to "edit" , edit_message_path(message) %>
          <%= link_to "destroy" , message , method: :delete, data: { confirm: '削除してもよろしいですか？' } %>
         )
