--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -12,7 +12,7 @@
     </div>
   <% end %>
 
-  <label>名前:<label>
+  <label>名前:</label>
   <%= f.text_field :name,class:"panel panel-danger" %>
 
   <label>年齢:</label>
